--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!-- _layouts/default.html (or your custom layout file) -->
+<!-- _layouts/default.html -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,17 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ '/assets/css/nautical-style.css' | relative_url }}">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 
 <body>
   <header>
     <div class="header-container">
-      <div class="logo">
-        <a href="{{ site.baseurl }}/">
-          <img src="{{ site.baseurl }}/assets/img/logo.png" alt="Christian Arlington's Portfolio" />
-        </a>
-      </div>
+      <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+      <p>Navigating your IT Security needs</p>
       <nav>
         <ul>
           <li><a href="{{ site.baseurl }}/">Home</a></li>
@@ -34,14 +30,7 @@
   </main>
 
   <footer>
-    <div class="footer-container">
-      <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}</p>
-      <ul class="social-links">
-        <li><a href="https://linkedin.com/in/christian-arlington-136695239/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="https://github.com/NauticalAnalysis" target="_blank"><i class="fab fa-github"></i></a></li>
-        <!-- Add more social links as needed -->
-      </ul>
-    </div>
+    <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}</p>
   </footer>
 </body>
 </html>
