--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="{{ '/assets/css/nautical-style.css' | relative_url }}">
 </head>
 <body>
-    <div class="header">
-        <h1>⚓ Nautical Analysis</h1>
-    </div>
+    <div class="overlay"></div>
     <div class="container">
-        {{ content }}
+        <header>
+            <h1>⚓ Nautical Analysis</h1>
+        </header>
+        <main>
+            {{ content }}
+        </main>
     </div>
 </body>
 </html>
