--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,10 @@
         <header>
             <h1>⚓ Nautical Analysis</h1>
         </header>
+        <div class="intro">
+            <h2>Hi, I'm Christian Arlington</h2>
+            <img src="{{ '/assets/img/profile.jpg' | relative_url }}" alt="Christian Arlington" class="profile-pic">
+        </div>
         <main>
             {{ content }}
         </main>
