--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         </header>
         <div class="intro">
             <h2>Hi, I'm Christian Arlington</h2>
-            <img src="{{ '/assets/img/profile.jpg' | relative_url }}" alt="Christian Arlington" class="profile-pic">
+            <img src="{{ site.baseurl }}/assets/img/profile.jpg" alt="Christian Arlington" class="profile-pic">
         </div>
         <main>
             {{ content }}
